Adds missing icons for entities

--- a/manager/src/main/java/cat/xtec/merli/duc/public/Sprites.css
+++ b/manager/src/main/java/cat/xtec/merli/duc/public/Sprites.css
@@ -4,6 +4,18 @@
   background-image: url('icons/ROOT_CONCEPT.svg');
 }
 
+.duc-CONTENT_CATEGORY {
+  background-image: url('icons/CONTENT_CATEGORY.svg');
+}
+
+.duc-VOCABULARY_TERM {
+  background-image: url('icons/VOCABULARY_TERM.svg');
+}
+
+.duc-FREE_TERM {
+  background-image: url('icons/FREE_TERM.svg');
+}
+
 .duc-LEARNING_OBJECT {
   background-image: url('icons/LEARNING_OBJECT.svg');
 }
