Refactors the manager RPC service servlets
* Abstracts the servlets into a common base.
* Implements a service for each domain type.

--- a/manager/src/main/java/cat/xtec/merli/duc/public/Portlet.css
+++ b/manager/src/main/java/cat/xtec/merli/duc/public/Portlet.css
@@ -140,10 +140,11 @@
 .duc-CheckBoxEditor,
 .duc-RadioButtonEditor {
   display: flex;
+  align-content: flex-start;
   flex-direction: column;
   flex-wrap: wrap;
   overflow-x: auto;
-  max-height: 145px;
+  max-height: 124px;
   max-width: 100%;
   width: 100%;
 }
